--- a/cookbook/openai-functions-with-climate-apis.ipynb
+++ b/cookbook/openai-functions-with-climate-apis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "57b387ce-c54d-4019-816e-e49e7724f9fb",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "f4679f38-8d28-495d-8ee7-5e3e5beed5ea",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "a7b8950f-8779-4a1f-a284-b054e8ba9c0c",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "6c904dc7-cb19-46da-9b66-d960c1b98286",
    "metadata": {},
    "outputs": [
@@ -63,8 +63,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34massistant: In which city are you interested in knowing the weather? Please provide the city\n",
-      "name, state code, and country.\n",
+      "\u001b[34massistant: Sure, could you please provide me with the city, state, and country for which you\n",
+      "would like to know the weather?\n",
       "\u001b[0m\n"
      ]
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "4e995aef-79d4-4b26-8af9-3ac827a39d82",
    "metadata": {},
    "outputs": [
@@ -85,8 +85,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34massistant: The current weather in Sunnyvale, CA, USA is overcast clouds with a temperature of\n",
-      "58.64°F.\n",
+      "\u001b[34massistant: The current weather in Sunnyvale, CA is overcast clouds with a temperature of 65.5\n",
+      "degrees Fahrenheit.\n",
       "\u001b[0m\n"
      ]
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "bdc1ebda-538d-44d1-80e2-0a9fe5fe50ad",
    "metadata": {},
    "outputs": [
@@ -107,8 +107,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34massistant: The current weather in Sunnyvale, CA, USA is overcast clouds with a temperature of\n",
-      "14.84°C.\n",
+      "\u001b[34massistant: The current weather in Sunnyvale, CA is overcast clouds with a temperature of 18.6\n",
+      "degrees Celsius.\n",
       "\u001b[0m\n"
      ]
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "84796278-86f8-4b17-b036-a018985f6dbd",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34massistant: The air quality in Sunnyvale, California, USA is 43 AQI (Air Quality Index).\n",
+      "\u001b[34massistant: The current air quality in Sunnyvale, California is 8 AQI.\n",
       "\u001b[0m\n"
      ]
     }
@@ -142,7 +142,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
+   "id": "153f83bf-fd6d-498b-afab-8a5a7b7a3d5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34massistant: The current weather in Boston, MA is scattered clouds with a temperature of 47.7\n",
+      "degrees Fahrenheit. The air quality in Boston is 16 AQI.\n",
+      "\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "messages.append({\"role\": \"user\", \"content\": \"How is the weather and air quality in Boston, MA?\"})\n",
+    "messages = genapi.chat(messages, function_names, functions)\n",
+    "notebook.print_chat(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "9df12352-3271-4fd4-abc9-82bf9cf2860a",
    "metadata": {},
    "outputs": [
@@ -155,32 +177,40 @@
       "\u001b[0m\n",
       "\u001b[32muser: What's the weather today?\n",
       "\u001b[0m\n",
-      "\u001b[34massistant: In which city are you interested in knowing the weather? Please provide the city\n",
-      "name, state code, and country.\n",
+      "\u001b[34massistant: Sure, could you please provide me with the city, state, and country for which you\n",
+      "would like to know the weather?\n",
       "\u001b[0m\n",
       "\u001b[32muser: I live in Sunnyvale, CA.\n",
       "\u001b[0m\n",
-      "\u001b[35mfunction (weather): {\"location\": \"Sunnyvale, CA, USA\", \"temperature\": 58.64, \"units\":\n",
+      "\u001b[35mfunction (weather): {\"location\": \"Sunnyvale, CA, USA\", \"temperature\": 65.5, \"units\":\n",
       "\"Fahrenheit\", \"forecast\": \"overcast clouds\"}\n",
       "\u001b[0m\n",
-      "\u001b[34massistant: The current weather in Sunnyvale, CA, USA is overcast clouds with a temperature of\n",
-      "58.64°F.\n",
+      "\u001b[34massistant: The current weather in Sunnyvale, CA is overcast clouds with a temperature of 65.5\n",
+      "degrees Fahrenheit.\n",
       "\u001b[0m\n",
       "\u001b[32muser: in Metric units please.\n",
       "\u001b[0m\n",
-      "\u001b[35mfunction (weather): {\"location\": \"Sunnyvale, CA, USA\", \"temperature\": 14.84, \"units\":\n",
-      "\"Celsius\", \"forecast\": \"overcast clouds\"}\n",
+      "\u001b[35mfunction (weather): {\"location\": \"Sunnyvale, CA, USA\", \"temperature\": 18.6, \"units\": \"Celsius\",\n",
+      "\"forecast\": \"overcast clouds\"}\n",
       "\u001b[0m\n",
-      "\u001b[34massistant: The current weather in Sunnyvale, CA, USA is overcast clouds with a temperature of\n",
-      "14.84°C.\n",
-      "\u001b[0m\n",
-      "\u001b[32muser: and how is the air quality here.\n",
+      "\u001b[34massistant: The current weather in Sunnyvale, CA is overcast clouds with a temperature of 18.6\n",
+      "degrees Celsius.\n",
       "\u001b[0m\n",
       "\u001b[32muser: and how is the air quality here.\n",
       "\u001b[0m\n",
-      "\u001b[35mfunction (air_quality): {\"location\": \"Sunnyvale, California, USA\", \"air_quality\": \"43 AQI\"}\n",
+      "\u001b[35mfunction (air_quality): {\"location\": \"Sunnyvale, California, USA\", \"air_quality\": \"8 AQI\"}\n",
       "\u001b[0m\n",
-      "\u001b[34massistant: The air quality in Sunnyvale, California, USA is 43 AQI (Air Quality Index).\n",
+      "\u001b[34massistant: The current air quality in Sunnyvale, California is 8 AQI.\n",
+      "\u001b[0m\n",
+      "\u001b[32muser: How is the weather and air quality in Boston, MA?\n",
+      "\u001b[0m\n",
+      "\u001b[35mfunction (weather): {\"location\": \"Boston, MA, USA\", \"temperature\": 47.7, \"units\": \"Fahrenheit\",\n",
+      "\"forecast\": \"scattered clouds\"}\n",
+      "\u001b[0m\n",
+      "\u001b[35mfunction (air_quality): {\"location\": \"Boston, Massachusetts, USA\", \"air_quality\": \"16 AQI\"}\n",
+      "\u001b[0m\n",
+      "\u001b[34massistant: The current weather in Boston, MA is scattered clouds with a temperature of 47.7\n",
+      "degrees Fahrenheit. The air quality in Boston is 16 AQI.\n",
       "\u001b[0m\n"
      ]
     }
@@ -191,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "05849200-0cff-44ea-bf02-c20b6067a6a5",
    "metadata": {},
    "outputs": [
@@ -199,12 +229,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The air quality in New York City, NY is currently 10 AQI, which is considered good.\n"
+      "The air quality in Austin, Texas is currently at a level of 12 AQI (Air Quality Index). This indicates that the air quality is considered good, and poses little to no risk to the general population.\n"
      ]
     }
    ],
    "source": [
-    "act_messages = [{\"role\": \"user\", \"content\": \"What's the air quality in New York City, NY?\"}]\n",
+    "act_messages = [{\"role\": \"user\", \"content\": \"How is the air quality in Austin, Texas?\"}]\n",
     "print(genapi.act(act_messages, function_names, functions))"
    ]
   }
